chore: add input for country, and weather html

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flask Weather App</title>
+  <title>{{ title }} Weather</title>
   <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
 </head>
 <body>
@@ -13,5 +13,15 @@
     <input type="text" name="country" id="city" placeholder="Enter Country">
     <button type="submit">Submit</button>
   </form>
+  <div class="weather-display">
+    <h2>{{ title }}, {{ country }} Weather</h2>
+    <p>Current Weather Status: {{ status }}</p>
+    <p>Tempature: {{ temp }}c&deg;</p>
+    <p>Min Tempature: {{ min_temp }}c&deg;</p>
+    <p>Max Tempature: {{ max_temp }}c&deg;</p>
+    <p>Feels like: {{ feels_like }}c&deg;</p>
+    <p>Humidity: {{ humidity }}%</p>
+  </div>
+
 </body>
 </html>
