--- a/templates/index.html
+++ b/templates/index.html
@@ -13,5 +13,6 @@
     <input type="text" name="country" id="city" placeholder="Enter Country">
     <button type="submit">Submit</button>
   </form>
+  {% block content %} {% endblock %}
 </body>
 </html>
