--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
   <h1>Flask Weather App</h1>
+  <div class="date-container">
+    <p class="date">Date: {{ data.date }}</p>
+    <p class="date">Current Time: {{ data.time }}</p>
+  </div>
   <form action="/weather">
     <input type="text" name="city" id="city" placeholder="Enter a City">
-    <input type="text" name="country" id="city" placeholder="Enter Country">
+    <input type="text" name="country" id="country" placeholder="Enter Country">
     <button type="submit">Submit</button>
   </form>
   {% block content %} {% endblock %}
