--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,6 +23,12 @@ input, button, textarea, select {
   font: inherit;
 }
 
+button {
+  margin-left: 0.5rem; 
+  color: whitesmoke;
+  cursor: pointer;
+}
+
 p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
 }
@@ -33,13 +39,17 @@ input, button {
   font-size: 1.25rem;
 }
 
-button {
-  background-color: red;
-  cursor: pointer;
-}
-
 h1 {
   font-size: 3rem;
+}
+
+.date-container {
+  display: grid;
+  gap: 1rem;
+}
+
+.date-container p {
+  font-size: 1.5rem;
 }
 
 .weather-display {
