--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
 <body>
   <h1>Flask Weather App</h1>
   <div class="date-container">
-    <p class="date">Date: {{ data.date }}</p>
-    <p class="date">Current Time: {{ data.time }}</p>
+    <p class="date">Date: {{ info.date }}</p>
+    <p class="date">Current Time: {{ info.time }}</p>
   </div>
   <form action="/weather">
     <input type="text" name="city" id="city" placeholder="Enter a City">
